new proj/src/objects/Account_Request__c.object
<CustomObject>
    <fields>
        <fullName>AccountName_Up__c</fullName>
        <label>AccountName_Up</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City_Up__c</fullName>
        <label>Billing City_Up</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country_Up__c</fullName>
        <label>Billing Country_Up</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province_Up__c</fullName>
        <label>Billing State/Province_Up</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_Up__c</fullName>
        <label>Billing Street_Up</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code_Up__c</fullName>
        <label>Billing Zip/Postal Code_Up</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Up__c</fullName>
        <label>DUNS Number_Up</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Acc_Modification_Process__c</fullName>
        <defaultValue>&quot;The Account Modification Request is used to:&quot; +br()+
&quot;1- Request a spelling correction on the Account Name  ( example: GRB Project, Inc change to GRB Projekt, Inc. )&quot; +br()+ 
&quot;2- Request  a spelling correction on the  Street ( example: St. changes to Street )&quot; + br()+
&quot;3- To append the zip  ( example: Postal Code changes from 30062 to 30062-3456&quot; + br()+

&quot;For all other account changes, it is considered a new account and must go through the new account process.&quot;</defaultValue>
        <label>&lt;font color=&quot;red&quot;&gt;Important Note&lt;/font&gt;</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Account_Name__c</fullName>
        <formula>GE_HQ_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Account_Number__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Account_Request_ID__c</fullName>
        <description>Used to store the value of &quot;NAME&quot; which is a standard field labelled Account Request ID</description>
        <externalId>true</externalId>
        <label>Account ID2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Account_Request_Submit_Time__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Account Request Submit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Modification Requests</relationshipLabel>
        <relationshipName>Account_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Alternate_Tradestyle_Name__c</fullName>
        <label>Alternate Trade Style Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Billing_City__c</fullName>
        <label>Billing City</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Billing_Country__c</fullName>
        <label>Billing Country</label>
        <picklist>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRITISH INDIAN OCEAN</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_CMF_Admin_Comments__c</fullName>
        <label>CMF Admin Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_CMF_Admin_Reason_Status__c</fullName>
        <label>CMF Admin Reason Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_CMF_Request_Status__c</fullName>
        <label>CMF Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process-CMF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved-CMF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected-CMF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold-CMF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_City__c</fullName>
        <label>City</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Confirmation_Number__c</fullName>
        <label>Confirmation #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRITISH INDIAN OCEAN</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_DUNS_Number__c</fullName>
        <externalId>true</externalId>
        <label>DUNS Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Doc_Repo__c</fullName>
        <formula>&quot;Document Upload Process:&quot; &amp; BR() &amp; &quot;1) Users to create an account and click save first.&quot; &amp;BR() &amp; &quot;2) The account id will be auto-generated &amp; populated.&quot; &amp;BR()&amp; &quot;3) Click the data form link besides Documentum URL and go to the data form. Fill in the account id &amp; upload the attachments.&quot; &amp;BR()&amp; &quot;4) Copy the URL of the data form back to Documentation URL section. Submit to CMF team.&quot; &amp;BR()&amp; BR()&amp; &quot;Examples of documentation are a purchase order, service contract, invoice, company website, company letterhead or company business card validating customer name and address as submitted.&quot; &amp; BR() &amp;  BR() &amp; &quot;Account Request ID:&quot; &amp;   Name  &amp; BR() &amp; BR() &amp; HYPERLINK(&quot;http://supportcentral.ge.com/dataforms/sup_dataform_display_beta.asp?dataform_id=242177&quot;, &quot;Documentation Repository Link&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Documentation1__c</fullName>
        <inlineHelpText>Examples of documentation are a purchase order, service contract, invoice, company website, company letterhead or company business card validating customer name and address as submitted.</inlineHelpText>
        <label>Documentation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Documentation2__c</fullName>
        <inlineHelpText>Examples of documentation are a purchase order, service contract, invoice, company website, company letterhead or company business card validating customer name and address as submitted.</inlineHelpText>
        <label>Documentation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Documentation3__c</fullName>
        <inlineHelpText>Examples of documentation are a purchase order, service contract, invoice, company website, company letterhead or company business card validating customer name and address as submitted.</inlineHelpText>
        <label>Documentation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_HQ_GE_VAT_Number_Data_Source__c</fullName>
        <label>GE VAT # Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>D&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENERGY SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PURCHASE ORDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTRACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VERBAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Gold_ID__c</fullName>
        <label>Gold ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Internal_Customer__c</fullName>
        <label>Internal Customer</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Latitude_Up__c</fullName>
        <label>Latitude Up</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Latitude__c</fullName>
        <label>Latitude</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Legacy_System__c</fullName>
        <defaultValue>&quot;SFDC&quot;</defaultValue>
        <label>Legacy System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Legal_Entity_Check__c</fullName>
        <label>Legal Entity Check</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Legal_Entity_Name__c</fullName>
        <label>Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Location__c</fullName>
        <defaultValue>&quot;DEFAULT&quot;</defaultValue>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Longitude_Up__c</fullName>
        <label>Longitude Up</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Longitude__c</fullName>
        <label>Longitude</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_MARKETING_NAME__c</fullName>
        <label>GE Marketing Name</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Marketing_Name_Up__c</fullName>
        <label>GE Marketing Name Up</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Nts_Comments__c</fullName>
        <defaultValue>&quot;You Can Enter Comments Here&quot;</defaultValue>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Org_ID__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>Org ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Original_Web_Request_Id__c</fullName>
        <formula>&apos;~ORGRQID:&apos; &amp; GE_HQ_Account__r.GE_HQ_Account_ID__c &amp; &apos;~&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Web Request Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending CMF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to CMF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending User Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMF Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Modify Customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Requested_Account_Name_Up__c</fullName>
        <label>Requested Account Name Up</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Requested_Account_Name__c</fullName>
        <label>Requested Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Requester_Id__c</fullName>
        <label>Requester Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_SSO_ID__c</fullName>
        <label>SSO ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Site_Use_Code__c</fullName>
        <label>Site Use Code</label>
        <picklist>
            <picklistValues>
                <fullName>SHIP_TO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BILL_TO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTH</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Source__c</fullName>
        <defaultValue>&quot;SFDC&quot;</defaultValue>
        <label>Source</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_State_Province__c</fullName>
        <label>State / Province</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_VAT_Exempt__c</fullName>
        <label>VAT Exempt</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_VAT_Expiration_Date__c</fullName>
        <label>VAT Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_VAT_Group__c</fullName>
        <label>VAT Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_VAT_Notes__c</fullName>
        <label>VAT Notes</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_VAT_Registration__c</fullName>
        <label>VAT Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Vat_Number__c</fullName>
        <label>Vat Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Vat_Reg_Code__c</fullName>
        <label>Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Refusal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Tax-exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non – VAT Country</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Watchlist_Flag__c</fullName>
        <label>Watchlist Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_WebService_Response_Status__c</fullName>
        <label>WebService Response Status</label>
        <picklist>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAILURE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Web_Request_ID__c</fullName>
        <externalId>true</externalId>
        <label>Web Request ID</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Web_Request_Ref__c</fullName>
        <label>Web Request Ref</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Website__c</fullName>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_PW_KYC_Status__c</fullName>
        <label>KYC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Manual Due Diligence In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Due Diligence Review In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Due Diligence Sent back for addl Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Due Diligence Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Due Diligence Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Due Diligence not required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending User Submission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Modify_Requested_Account_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You acknowledge the name change is a spelling/cosmetic change &amp; not the legal entity name change</inlineHelpText>
        <label>Name change is spelling / cosmetic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_City_Up__c</fullName>
        <label>Shipping City_Up</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country_Up__c</fullName>
        <label>Shipping Country_Up</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_PostalCode_Up__c</fullName>
        <label>Shipping Postal Code_Up</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province_Up__c</fullName>
        <label>Shipping State/Province_Up</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_Up__c</fullName>
        <label>Shipping Street_Up</label>
        <type>TextArea</type>
    </fields>
    <label>Account Modification Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>1-{0000000}</displayFormat>
        <label>Account Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Modification Requests</pluralLabel>
    <recordTypes>
        <fullName>ES_Account_Request</fullName>
        <active>true</active>
        <label>Account Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ES_Account_Request_ReadOnly</fullName>
        <active>true</active>
        <label>Account Request ReadOnly</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckLenOnAccPhone</fullName>
        <active>true</active>
        <description>This rule help to limit phone number less than or equal to 17 digits</description>
        <errorConditionFormula>OR( 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;A&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;B&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;C&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;D&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;E&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;F&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;G&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;H&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;I&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;J&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;K&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;L&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;M&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;N&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;O&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;P&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;Q&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;R&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;S&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;T&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;U&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;V&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;W&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;X&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;Y&quot;), 
CONTAINS( UPPER(GE_HQ_Phone__c ) , &quot;Z&quot;), 
CONTAINS(GE_HQ_Phone__c ,&apos;&amp;&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;_&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;=&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;*&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;&lt;&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;&gt;&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;%&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;$&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;@&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;!&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;^&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;/&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;{&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;}&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;[&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;]&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;:&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;;&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;?&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;|&apos;), 
CONTAINS(GE_HQ_Phone__c ,&apos;,&apos;),
LEN(GE_HQ_Phone__c ) &gt; 17)</errorConditionFormula>
        <errorMessage>Shouldn&apos;t enter Alphabets  , Special Characters in Phone and Not more than 17 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_HQ_Latitude_Validation</fullName>
        <active>true</active>
        <description>Validation rule for Latitude field on Account Modification Object.</description>
        <errorConditionFormula>AND( NOT(ISBLANK(GE_HQ_Latitude__c)),OR(CONTAINS( GE_HQ_Latitude__c, &apos;a&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;b&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;c&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;d&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;e&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;f&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;g&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;h&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;i&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;j&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;k&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;l&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;m&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;n&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;o&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;p&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;q&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;r&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;s&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;t&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;u&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;v&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;w&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;x&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;y&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;z&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;!&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;@&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;#&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;$&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;%&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;^&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;&amp;&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;*&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;_&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;=&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;?&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;/&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;~&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;`&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;&lt;&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;&gt;&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;,&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;{&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;[&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;}&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;]&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;|&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;(&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;)&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;:&apos;), 
CONTAINS( GE_HQ_Latitude__c, &apos;;&apos;),CONTAINS( GE_HQ_Latitude__c, &apos;&quot;&apos;), AND((LEFT(GE_HQ_Latitude__c, 1) != &apos;+&apos;), (LEFT(GE_HQ_Latitude__c, 1) != &apos;-&apos;))))</errorConditionFormula>
        <errorDisplayField>GE_HQ_Latitude__c</errorDisplayField>
        <errorMessage>Please enter only numbers and must be with prefixed with &apos;+&apos; or &apos;-&apos; 
For Eg : &apos;+12.2345&apos; or &apos;-12.2345&apos;</errorMessage>
    </validationRules>
</CustomObject>